Правильно обработал null и повторно зарефакторил метод getAllShoppingListsFromEvent в ShoppingListCompositeRepositoryImpl